@@ -1,6 +1,6 @@
 % File src/library/base/man/utf8Conversion.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2015 R Core Team
 % Distributed under GPL 2 or later
 
 \name{utf8Conversion}
@@ -8,7 +8,7 @@
 \alias{intToUtf8}
 \alias{Unicode}
 \alias{code point}
-\title{Convert to or from UTF-8-encoded Character Vectors}
+\title{Convert Integer Vectors to or from UTF-8-encoded Character Vectors}
 \description{
   Conversion of UTF-8 encoded character vectors to and from integer vectors.
 }
@@ -31,7 +31,8 @@ intToUtf8(x, multiple = FALSE)
   \code{0} to \code{0x10FFFF}.
   
   \code{utf8ToInt} converts a length-one character string encoded in
-  UTF-8 to an integer vector of Unicode code points.
+  UTF-8 to an integer vector of Unicode code points.  As from \R 3.2.1
+  it checks validity of the input and returns \code{NA} if it is invalid.
 
   \code{intToUtf8} converts a numeric vector of Unicode code points
   either to a single character string or a character vector of single
@@ -45,6 +46,9 @@ intToUtf8(x, multiple = FALSE)
 \examples{\donttest{
 ## will only display in some locales and fonts
 intToUtf8(0x03B2L) # Greek beta
-}}
+}
+utf8ToInt("bi\u00dfchen")
+utf8ToInt("\xfa\xb4\xbf\xbf\x9f")
+}
 \keyword{character}
 \keyword{utilities}
